[package]
name = "demo-app"
version = "0.1.0"
authors = ["voidpumpkin <32368314+voidpumpkin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fallout-ui = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["wasmbind"] }
convert_case = { workspace = true }
data-encoding = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
strum = { workspace = true, features = ["derive"] }
validator = { workspace = true }
velcro = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
  "EventTarget",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "MouseEvent",
  "Response",
  "Document",
] }
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
yew_heroicons = { workspace = true }
gloo = { workspace = true }
isocountry = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
