[package]
name = "fallout-ui-macro"
version = "0.1.0"
authors = ["voidpumpkin <32368314+voidpumpkin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["extra-traits"] }
quote = { workspace = true }
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
